<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layoutMargin"
    tools:context=".activities.QuanLyNhanSu2023Activity">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/lblHoVaTen"
        app:layout_constraintBottom_toTopOf="@+id/lblBangCap"
        app:layout_constraintEnd_toStartOf="@+id/edtName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:paddingLeft="10dp"
        android:hint="@string/edtHoVaTen"
        app:layout_constraintBottom_toBottomOf="@+id/lblName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblBangCap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblBangCap"
        app:layout_constraintBottom_toTopOf="@+id/lblSoThich"
        app:layout_constraintEnd_toEndOf="@+id/lblName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/lblBangCap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toTopOf="@+id/lblBangCap">

        <RadioButton
            android:id="@+id/radTC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radTrungCap" />

        <RadioButton
            android:id="@+id/radCD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radCaoDang" />

        <RadioButton
            android:id="@+id/radDH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radDaiHoc" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblSoThich"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblSoThich"
        app:layout_constraintBottom_toTopOf="@+id/edtSoThichKhac"
        app:layout_constraintEnd_toEndOf="@+id/lblBangCap"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBangCap"
        app:layout_constraintVertical_bias="0.5" />


    <CheckBox
        android:id="@+id/chkDocSach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chkDocSach"
        app:layout_constraintBottom_toBottomOf="@+id/lblSoThich"
        app:layout_constraintEnd_toStartOf="@+id/chkDuLich"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/radGroup"
        app:layout_constraintTop_toTopOf="@+id/lblSoThich" />

    <CheckBox
        android:id="@+id/chkDuLich"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chkDuLich"
        app:layout_constraintBottom_toBottomOf="@+id/chkDocSach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chkDocSach"
        app:layout_constraintTop_toTopOf="@+id/chkDocSach" />

    <EditText
        android:id="@+id/edtSoThichKhac"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/edtSoThichKhac"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chkDocSach"
        app:layout_constraintTop_toBottomOf="@+id/lblSoThich"
        app:layout_constraintVertical_bias="0.5" />

    <ListView
        android:id="@+id/personsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btnThem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThem"
        android:backgroundTint="@color/btnColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <Button
        android:id="@+id/btnThoat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThoat"
        android:backgroundTint="@color/btnColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <!-- Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>